fix weird overflow on docs main content

--- a/better-docs/styles/style.css
+++ b/better-docs/styles/style.css
@@ -8,3 +8,7 @@
 .tag-source span a {
   color: inherit;
 }
+
+#main>.core {
+  overflow: initial;
+}
